# Zentri

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.override.yml  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_portfolio_schema.py  003_price_pipeline_schema.py  004_phase6_ai_schema.py
backend/app/: main.py
backend/app/api/: analysis.py  assets.py  auth.py  deps.py  documents.py  overview.py  pipeline.py  platforms.py  portfolio.py  settings.py
backend/app/core/: config.py  database.py  encryption.py  logging.py  security.py
backend/app/models/: __init__.py  ai_analysis.py  asset.py  benchmark.py  document.py  holding.py  import_profile.py  llm_conversation.py  llm_settings.py  pipeline_log.py  platform.py  price.py  transaction.py  user.py
backend/app/schemas/: asset.py  auth.py  csv_import.py  holding.py  overview.py  pipeline.py  platform.py  price.py  transaction.py
backend/app/services/: asset.py  auth.py  csv_import.py  hardware.py  llm_service.py  overview.py  pipeline.py  platform.py  portfolio.py  price_feed.py  rag_service.py
backend/tests/: conftest.py  test_analysis.py  test_assets.py  test_auth.py  test_csv_import.py  test_documents.py  test_encryption.py  test_hardware.py  test_health.py  test_llm_service.py  test_llm_settings.py  test_overview.py  test_pipeline.py  test_platforms.py  test_portfolio.py  test_rag_service.py  test_security.py
backend/worker/: main.py
backend/worker/jobs/: ingest_document.py  price_fetch.py  (+1 more)
(+52 files in other folders)
